<resources>
    <string name="title_home"><font size="14">首页</font></string>
    <string name="title_test"><font size="14">训练营</font></string>
    <string name="title_learn"><font size="14">开始学习</font></string>
    <string name="title_profile"><font size="14">我的</font></string>

    <!-- TODO: Remove or change this placeholder text -->
    <!--profile-->
    <string name="txt_profile_register_now">Lucy</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="finishtrial_string"><u>返回首页</u></string>
    <string name="home_bannertext">开始您的学习之旅吧！</string>
    <string name="home_level_intro_text">课程介绍</string>
    <string name="home_system_test_text">精选课程</string>
    <string name="home_purchase_text">购买课程</string>
    <string name="home_login_welcome_text">欢迎 WELCOME</string>
    <string name="use_point_text">使用积分</string>
    <string name="unuse_point_text">不使用积分</string>
    <string name="user_experience_text">体验课程</string>
    <string name="free_experience_text">免费体验精选课程</string>
    <string name="start_intro_text">马上选择开始体验吧!</string>
    <string name="follow_expereince_text">零基础，从有趣的互动开始</string>
    <!-- Messages from Server -->

    <string name="edit_text_phone_hint"><font size="15">输入手机号</font></string>
    <string name="edit_text_pass_hint"><font size="15">输入8-16位新密码</font></string>
    <string name="edit_text_sms_hint"><font size="15">输入验证码</font></string>
    <string name="edit_text_pass_confirm_hint"><font size="15">重复新密码</font></string>
    <string name="edit_text_child_name_hint"><font size="15">输入孩子姓名</font></string>
    <string name="edit_text_child_birth_hint"><font size="15">输入生日</font></string>
    <string name="speaking_level_intro">课程解读</string>
    <string name="speaking_level_intro_in">查看课程内容</string>
    <string name="speaking_level_cur">今日计划</string>
    <string name="speaking_level_cur_in">上一次学习到：</string>
    <string name="speaking_banner">精彩活动</string>
    <string name="speaking_history">口语练习</string>
    <string name="speaking_history_first_start">立即跟读</string>
    <string name="speaking_history_first_end">GO >></string>
    <string name="speaking_history_second">跟读记录</string>
    <string name="main_study_button_text">开始学习</string>
    <string name="main_app_name">游美英语APP</string>
    <string name="mainwelcomtoptxt">登录即可免费试用</string>
    <string name="mainlessontoptxt">快速了解</string>
    <string name="maintitle1">最新活动</string>
    <string name="mainbuttontext1">购买课程</string>
    <string name="mainbuttontext2">分享有礼</string>
    <string name="mainbuttontext3">分级测试</string>
    <string name="maintitle2">常见问题</string>
    <string name="mainprblemtoptext">点击获取解答</string>
    <string name="maintitletext3">了解游美</string>
    <string name="mainvideodes">哥伦比亚大学专家研发\n情景互动英语</string>
    <string name="mainproblemdesc">您的问题或许能在这里找到答案哦～</string>
    <string name="maintooltiptext">点击这里选择您想学习的课程</string>
    <string name="connectionnetconfigtitle">服务器连接失败</string>
    <string name="connectionnetconfigtitle1">网络较差\n请切换网络后重试</string>
    <string name="connectioncurrentnetmobiledata">*当前为移动网络</string>
    <string name="connectionnetconfigwifi">*当前为无线网络</string>
    <string name="connectrtetry">尝试重新连接</string>
    <string name="connectionnetsettingopen">重新设置网络</string>
    <string name="title_activity_download_content">DownloadContentAct</string>

</resources>


