<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:paddingBottom="@dimen/_80sdp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/_10sdp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/yuantiscregular"
            android:text="@string/speaking_level_intro"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="10dp"
            android:text="跟着外教学英语"
            android:visibility="gone"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/imageView12"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/about_levels" />

        <com.usacamp.utils.RoundedImageView
            android:id="@+id/imageView12"
            android:layout_width="0dp"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:adjustViewBounds="true"
            android:background="@drawable/speaking_outline_black"
            android:padding="1dp"
            android:visibility="gone"
            android:src="@drawable/teacherphoto"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toStartOf="@+id/button27"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            app:riv_corner_radius="5dp" />

        <Button
            android:id="@+id/button27"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/_10sdp"
            android:background="@drawable/teacher_button_background"
            android:text="更多精彩视频\n点击这里"
            android:textColor="@color/white"
            android:textSize="@dimen/_10sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView12"
            app:layout_constraintEnd_toEndOf="@+id/btnstartlearn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView12"
            app:layout_constraintTop_toTopOf="@+id/imageView12"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintWidth_percent="0.4" />

        <LinearLayout
            android:id="@+id/about_levels"
            android:layout_width="0dp"
            android:layout_height="@dimen/_70sdp"
            android:layout_marginTop="16dp"
            android:background="@drawable/speaking_outline_black"
            android:orientation="vertical"
            android:padding="1dp"
            android:weightSum="10"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/textView5">

            <com.usacamp.utils.RoundedImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="6"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/speakinglevelintro"
                app:riv_corner_radius_top_left="6dp"
                app:riv_corner_radius_top_right="6dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3.5"
                android:background="@color/white"
                android:fontFamily="@font/yuantiscregular"
                android:gravity="center"
                android:text="@string/speaking_level_intro_in"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp"
                android:textStyle="bold"

                />
        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.38" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/yuantiscregular"
            android:text="@string/speaking_level_cur"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btnstartlearn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/speaking_outline_black"
            android:padding="1dp"
            app:layout_constraintBottom_toBottomOf="@+id/about_levels"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/about_levels">

            <com.usacamp.utils.RoundedImageView
                android:id="@+id/imageView10"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="5dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/imageView6"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                app:riv_corner_radius_top_left="7dp"
                app:riv_corner_radius_top_right="7dp" />

            <com.usacamp.utils.RoundedImageView
                android:id="@+id/imageView6"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="fitXY"
                android:src="@drawable/speakinglevelcur"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline11"
                app:layout_constraintTop_toTopOf="parent"
                app:riv_corner_radius_bottom_right="6dp"
                app:riv_corner_radius_top_right="6dp" />

            <TextView
                android:id="@+id/learntxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/yuantiscregular"
                android:gravity="center"
                android:text="@string/speaking_level_cur_in"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/text_study_camp"
                app:layout_constraintEnd_toStartOf="@+id/imageView6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/text_study_camp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="camp1-1-A"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/learntxt"
                app:layout_constraintTop_toBottomOf="@+id/learntxt" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.6" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:clipToPadding="false"
            android:nestedScrollingEnabled="false"
            android:overScrollMode="never"
            android:padding="@dimen/spacing_middle"
            app:layout_constraintEnd_toEndOf="@+id/btnstartlearn"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/imageView12" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="textView,textView5" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>